--- a/src/style.css
+++ b/src/style.css
@@ -1,32 +1,57 @@
-/* #root{
-    background-color: rgb(46, 46, 46);
-} */
+body{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(37, 37, 37);
+    color: white;
+}
 
+#main{
+    position: relative;
+    top: 80px;
+    width: 100%;
+    padding-left: 50px;
+    padding-right: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 120px;
+    row-gap: 100px;
+}
 .card{
     position: relative;
-    margin: 5px;
-    padding: 5px;
-    border: solid gray 2px;
-    width: calc(100% / 4);
+    padding: 0 10px 10px 10px;
+    width: 100%;
+    height: 200px;
+
+    background-color: rgb(87, 87, 87);
+    border: solid lightgray 2px;
 }
 
 .cardInfo {
     display: grid;
+    height: 70%;
+    align-items: center;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
 }
 
-.cardInfo > .Open {grid-row: 1; grid-column: 1;}
-.cardInfo > .Close {grid-row: 2; grid-column: 1;}
-.cardInfo > .High {grid-row: 1; grid-column: 2;}
-.cardInfo > .Low {grid-row: 2; grid-column: 2;}
+.cardInfo .Open {grid-row: 1; grid-column: 1;}
+.cardInfo .Close {grid-row: 2; grid-column: 1;}
+.cardInfo .High {grid-row: 1; grid-column: 2;}
+.cardInfo .Low {grid-row: 2; grid-column: 2;}
+
+.card > h1 {
+    padding: 0 10px;
+    margin: 0 -10px;
+    font-size: 2.9em;
+    border-bottom: lightgray solid 1px;
+}
 
 .green{
-    color: green;
+    color: rgb(91, 204, 91);
 }
 
 .red {
-    color: red;
+    color: rgb(255, 49, 49);
 }
 
 .Close .green::after{
@@ -47,23 +72,38 @@
 }
 
 .data-point > p {
+    font-family: Tahoma, Geneva, sans-serif;
     margin-right: 5px;
+    font-size: 1.6em;
 }
 
 #submitter-container {
-    position: relative;
-    left: 200px;
-    width: 500px;
+    position: absolute;
+    top: 20px;
+    left: calc(50% - 200px);
+    width: 400px;
     display: flex;
     transition: all;
 }
 
 #submitter{
     width: 400px;
+    height: 30px;
+    border-radius: 20px;
+    border: white  solid 4px;
 }
 
-button{
+#submitter-container > button{
+    position: relative;
+    left: -30px;
+    top: 4px;
+    border-radius: 10px;
+    border: none;
+    background-color:rgb(87, 87, 87);
+    color: white;
+    font-size: 1.1em;
     height: fit-content;
+    cursor: pointer;
 }
 
 .input-option{
@@ -76,6 +116,7 @@ button{
     cursor: pointer;
     border: solid gray 1px;
     border-radius: 2px;
+    background-color: rgb(87, 87, 87);
 }
 
 .input-option .name {
@@ -90,17 +131,18 @@ ul {
 
 .delete-card-btn {
     position: absolute;
-    top: 2px;
-    right: 2px;
+    top: 0px;
+    right:2px;
+    font-size: 1.2em;
     cursor: pointer;
 }
 
 .delete-card-btn:hover{
     transform: scale(1.2);
-    color: red;
+    color: rgb(255, 55, 55);
 }
 
 .input-option:hover{
     transform: scale(1.05);
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(37, 37, 37);
 }
